--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ body._lock {
 }
 
 .mobile {
-  background: url("/img/bg1.png") center center/cover no-repeat;
+  background: url("../img/bg1.png") center center/cover no-repeat;
   padding: 46px 0 80px 0;
 }
 
@@ -565,33 +565,33 @@ body._lock {
 }
 
 .mobile .point_1 {
-  background: url("/img/ap_bg_1.png") center center/cover no-repeat;
+  background: url("../img/ap_bg_1.png") center center/cover no-repeat;
 }
 
 .mobile .point_2 {
-  background: url("/img/ap_bg_2.png") center center/cover no-repeat;
+  background: url("../img/ap_bg_2.png") center center/cover no-repeat;
 }
 
 .mobile .point_3 {
-  background: url("/img/ap_bg_3.png") center center/cover no-repeat;
+  background: url("../img/ap_bg_3.png") center center/cover no-repeat;
 }
 
 .mobile .point_4 {
-  background: url("/img/ap_bg_4.png") center center/cover no-repeat;
+  background: url("../img/ap_bg_4.png") center center/cover no-repeat;
 }
 
 .mobile .point_5 {
-  background: url("/img/ap_bg_5.png") center center/cover no-repeat;
+  background: url("../img/ap_bg_5.png") center center/cover no-repeat;
 }
 
 .mobile .point_6 {
-  background: url("/img/ap_bg_6.png") center center/cover no-repeat;
+  background: url("../img/ap_bg_6.png") center center/cover no-repeat;
 }
 
 .possibilities {
   position: relative;
   z-index: 2;
-  background: url("/img/bg1.png") center center/cover no-repeat;
+  background: url("../img/bg1.png") center center/cover no-repeat;
   padding: 66px 0 87px;
 }
 
@@ -721,17 +721,17 @@ body._lock {
 }
 
 .list__item_green::before {
-  background: url("/img/check_green.png") center center/cover no-repeat;
+  background: url("../img/check_green.png") center center/cover no-repeat;
 }
 
 .list__item_red::before {
-  background: url("/img/check_red.png") center center/cover no-repeat;
+  background: url("../img/check_red.png") center center/cover no-repeat;
 }
 
 .cities {
   padding: 50px 0;
   background-color: #080816;
-  background: url("/img/bg_2.png") center center/cover no-repeat;
+  background: url("../img/bg_2.png") center center/cover no-repeat;
 }
 
 .cities__title {
