--- a/sass/style.scss
+++ b/sass/style.scss
@@ -394,7 +394,7 @@ body {
 }
 
 .mobile {
-	background: url('/img/bg1.png') center center/cover no-repeat;
+	background: url('../img/bg1.png') center center/cover no-repeat;
 	padding: 46px 0 80px 0;
 
 	&__title {
@@ -450,34 +450,34 @@ body {
 	}
 
 	.point_1 {
-		background: url('/img/ap_bg_1.png') center center/cover no-repeat;
+		background: url('../img/ap_bg_1.png') center center/cover no-repeat;
 	}
 
 	.point_2 {
-		background: url('/img/ap_bg_2.png') center center/cover no-repeat;
+		background: url('../img/ap_bg_2.png') center center/cover no-repeat;
 	}
 
 	.point_3 {
-		background: url('/img/ap_bg_3.png') center center/cover no-repeat;
+		background: url('../img/ap_bg_3.png') center center/cover no-repeat;
 	}
 
 	.point_4 {
-		background: url('/img/ap_bg_4.png') center center/cover no-repeat;
+		background: url('../img/ap_bg_4.png') center center/cover no-repeat;
 	}
 
 	.point_5 {
-		background: url('/img/ap_bg_5.png') center center/cover no-repeat;
+		background: url('../img/ap_bg_5.png') center center/cover no-repeat;
 	}
 
 	.point_6 {
-		background: url('/img/ap_bg_6.png') center center/cover no-repeat;
+		background: url('../img/ap_bg_6.png') center center/cover no-repeat;
 	}
 }
 
 .possibilities {
 	position: relative;
 	z-index: 2;
-	background: url('/img/bg1.png') center center/cover no-repeat;
+	background: url('../img/bg1.png') center center/cover no-repeat;
 	padding: 66px 0 87px;
 
 	&::before {
@@ -597,13 +597,13 @@ body {
 
 		&_green {
 			&::before {
-				background: url("/img/check_green.png") center center/cover no-repeat;
+				background: url("../img/check_green.png") center center/cover no-repeat;
 			}
 		}
 
 		&_red {
 			&::before {
-				background: url("/img/check_red.png") center center/cover no-repeat;
+				background: url("../img/check_red.png") center center/cover no-repeat;
 			}
 		}
 	}
@@ -612,7 +612,7 @@ body {
 .cities {
 	padding: 50px 0;
 	background-color: #080816;
-	background: url("/img/bg_2.png") center center/cover no-repeat;
+	background: url("../img/bg_2.png") center center/cover no-repeat;
 
 	&__title {
 		margin-top: 30px;
