--- a/css/style.css
+++ b/css/style.css
@@ -767,7 +767,7 @@ body._lock {
 }
 
 .footer {
-  padding: 13px 10px 41px;
+  padding: 13px 10px 0px;
 }
 
 .footer__border {
@@ -779,6 +779,7 @@ body._lock {
 }
 
 .footer__row {
+  min-height: 120px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -791,6 +792,7 @@ body._lock {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .footer__nav {
@@ -811,7 +813,14 @@ body._lock {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
+}
+
+.footer__box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .footer__menu {
@@ -1098,6 +1107,9 @@ body._lock {
   }
   .footer__stores img :last-child {
     margin-right: 0;
+  }
+  .footer__box {
+    position: relative;
   }
   .footer .icons__menu {
     -webkit-box-ordinal-group: 2;
