--- a/sass/style.scss
+++ b/sass/style.scss
@@ -641,7 +641,7 @@ body {
 }
 
 .footer {
-	padding: 13px 10px 41px;
+	padding: 13px 10px 0px;
 
 	&__border {
 		width: 300px;
@@ -651,9 +651,11 @@ body {
 	}
 
 	&__row {
+		min-height: 120px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		position: relative;
 	}
 
 	&__nav {
@@ -661,7 +663,14 @@ body {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		position: relative;
+	}
+
+	&__box{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
 	}
 
 	&__menu {
