--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,21 @@ body._lock {
   overflow: hidden;
 }
 
+.wrapper {
+  overflow: hidden;
+  min-height: 100%;
+}
+
+.container {
+  max-width: 1140px;
+  overflow: hidden;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 #progressButton {
   position: fixed;
-  z-index: 20;
+  z-index: 2;
   bottom: 50px;
   right: 50px;
   height: 70px;
@@ -44,34 +56,26 @@ body._lock {
   color: #4A4A4A;
 }
 
-.container {
-  max-width: 1140px;
-  overflow: hidden;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.mt-25 {
-  margin-top: 25px;
-}
-
 .header {
   background-color: #212121;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 15;
+  z-index: 2;
   width: 100%;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
 }
 
 .header__item {
   position: relative;
 }
 
-.header.sticky {
+.header__box {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.header__box.sticky {
   background: rgba(0, 0, 0, 0.9);
   padding: 8px 0;
 }
@@ -100,10 +104,9 @@ body._lock {
 
 .uber {
   background: url("../img/uber_bg.png") center center/cover no-repeat;
-  background-attachment: fixed;
   min-height: 100%;
   position: relative;
-  margin-top: 50px;
+  padding-top: 50px;
   color: #FFFFFF;
 }
 
@@ -135,7 +138,7 @@ body._lock {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 .uber__callBack {
@@ -590,7 +593,7 @@ body._lock {
 
 .possibilities {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   background: url("../img/bg1.png") center center/cover no-repeat;
   padding: 66px 0 87px;
 }
@@ -962,6 +965,99 @@ body._lock {
   font-size: 15px;
 }
 
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 5;
+  -webkit-transition: all 0.8s ease 0s;
+  -o-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+}
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup.open .popup__content {
+  -webkit-transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+          transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  opacity: 1;
+}
+
+.popup__area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.popup__body {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 30px 10px;
+  -webkit-transition: all 0.8s ease 0s;
+  -o-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+}
+
+.popup__content {
+  background-color: #fff;
+  color: #000;
+  max-width: 800px;
+  padding: 30px;
+  position: relative;
+  -webkit-transition: all 0.8s ease 0s;
+  -o-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  -webkit-transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+          transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+
+.popup__content_image {
+  padding: 0;
+}
+
+.popup__image img {
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.popup__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 20px;
+  color: #000;
+  text-decoration: none;
+}
+
+.popup__title {
+  font-size: 40px;
+  margin: 0px 0px 1em 0px;
+}
+
 @media (min-width: 768px) {
   .menu__list {
     display: -webkit-box;
@@ -1238,7 +1334,7 @@ body._lock {
             flex: 0 0 100px;
   }
   .uber {
-    margin-top: 50px;
+    margin-top: 0px;
   }
   .uber .about__title {
     font-size: 40px;
