--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,9 +16,21 @@ body {
 	}
 }
 
+.wrapper {
+	overflow: hidden;
+	min-height: 100%;
+}
+
+.container {
+	max-width: 1140px;
+	overflow: hidden;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+
 #progressButton {
 	position: fixed;
-	z-index: 20;
+	z-index: 2;
 	bottom: 50px;
 	right: 50px;
 	height: 70px;
@@ -41,33 +53,25 @@ body {
 	color: #4A4A4A;
 }
 
-.container {
-	max-width: 1140px;
-	overflow: hidden;
-	margin: 0 auto;
-	padding: 0 10px;
-}
-
-.mt-25 {
-	margin-top: 25px;
-}
-
 .header {
 	background-color: $black;
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 15;
+	z-index: 2;
 	width: 100%;
-	transition: all 0.3s ease 0s;
 
 	&__item {
 		position: relative;
 	}
 
-	&.sticky {
-		background: rgba(0, 0, 0, 0.9);
-		padding: 8px 0;
+	&__box {
+		transition: all 0.3s ease 0s;
+		&.sticky {
+			background: rgba(0, 0, 0, 0.9);
+			padding: 8px 0;
+		}
+	
 	}
 
 	&__link {
@@ -93,10 +97,10 @@ body {
 
 .uber {
 	background: url("../img/uber_bg.png") center center/cover no-repeat;
-	background-attachment: fixed;
+	// background-attachment: fixed;
 	min-height: 100%; // нужно исправить высоту контейнера
 	position: relative;
-	margin-top: 50px;
+	padding-top: 50px;
 	color: #FFFFFF;
 
 	&:before {
@@ -118,7 +122,7 @@ body {
 		justify-content: space-between;
 		align-items: center;
 		position: relative;
-		z-index: 10;
+		z-index: 1;
 	}
 
 	&__callBack {
@@ -476,7 +480,7 @@ body {
 
 .possibilities {
 	position: relative;
-	z-index: 2;
+	z-index: 1;
 	background: url('../img/bg1.png') center center/cover no-repeat;
 	padding: 66px 0 87px;
 
@@ -774,6 +778,78 @@ body {
 		font-size: 15px;
 	}
 
+}
+
+// popup
+
+.popup {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+	top: 0;
+	left: 0;
+	opacity: 0;
+	visibility: hidden;
+	overflow-y: auto;
+	overflow-x: hidden;
+	z-index: 5;
+	transition: all 0.8s ease 0s;
+}
+.popup.open {
+	opacity: 1;
+	visibility: visible;
+}
+.popup.open .popup__content {
+	transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+	opacity: 1;
+}
+
+.popup__area {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.popup__body {
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 30px 10px;
+	transition: all 0.8s ease 0s;
+}
+.popup__content {
+	background-color: #fff;
+	color: #000;
+	max-width: 800px;
+	padding: 30px;
+	position: relative;
+	transition: all 0.8s ease 0s;
+	opacity: 0;
+	transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+.popup__content_image {
+	padding: 0;
+}
+.popup__image img {
+	max-width: 100%;
+	vertical-align: top;
+}
+
+.popup__close {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	font-size: 20px;
+	color: #000;
+	text-decoration: none;
+}
+.popup__title {
+	font-size: 40px;
+	margin: 0px 0px 1em 0px;
 }
 
 @import "media";
