--- a/sass/style.scss
+++ b/sass/style.scss
@@ -780,7 +780,7 @@ body {
 
 }
 
-// popup
+// modal - window 
 
 .popup {
 	position: fixed;
@@ -795,62 +795,71 @@ body {
 	overflow-x: hidden;
 	z-index: 5;
 	transition: all 0.8s ease 0s;
-}
-.popup.open {
-	opacity: 1;
-	visibility: visible;
-}
-.popup.open .popup__content {
-	transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
-	opacity: 1;
+
+	&__area {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+	}
+
+	&__body {
+		min-height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 30px 10px;
+		transition: all 0.8s ease 0s;
+	}
+
+	&__content {
+		background-color: #fff;
+		border-radius: 20px;
+		color: #000;
+		max-width: 800px;
+		padding: 30px;
+		position: relative;
+		transition: all 0.8s ease 0s;
+		opacity: 0;
+		transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+
+		&__image {
+			padding: 0;
+		}
+	}
+	&__image {
+		img {
+			max-width: 100%;
+			vertical-align: top;
+		}
+	}
+
+	&__close {
+		position: absolute;
+		right: 10px;
+		top: 10px;
+		font-size: 20px;
+		color: #000;
+		text-decoration: none;
+	}
+
+	&__title {
+		text-align: center;
+		font-size: 40px;
+		margin: 0px 0px 1em 0px;
+	}
+
+	&.open {
+		opacity: 1;
+		visibility: visible;
+		& .popup__content {
+			transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+			opacity: 1;
+		}
+	}
 }
 
-.popup__area {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-}
-
-.popup__body {
-	min-height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 30px 10px;
-	transition: all 0.8s ease 0s;
-}
-.popup__content {
-	background-color: #fff;
-	color: #000;
-	max-width: 800px;
-	padding: 30px;
-	position: relative;
-	transition: all 0.8s ease 0s;
-	opacity: 0;
-	transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
-}
-.popup__content_image {
-	padding: 0;
-}
-.popup__image img {
-	max-width: 100%;
-	vertical-align: top;
-}
-
-.popup__close {
-	position: absolute;
-	right: 10px;
-	top: 10px;
-	font-size: 20px;
-	color: #000;
-	text-decoration: none;
-}
-.popup__title {
-	font-size: 40px;
-	margin: 0px 0px 1em 0px;
-}
 
 @import "media";
 
