--- a/css/style.css
+++ b/css/style.css
@@ -1037,17 +1037,33 @@ body._lock {
 
 .popup__close {
   position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 20px;
+  right: 15px;
+  top: 15px;
+  font-size: 25px;
   color: #000;
   text-decoration: none;
 }
 
 .popup__title {
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
   margin: 0px 0px 1em 0px;
+}
+
+.popup__text {
+  font-size: 16px;
+}
+
+.popup__text p {
+  margin-bottom: 5px;
+}
+
+.popup__text p:last-child {
+  margin-bottom: 0;
+}
+
+.popup__map {
+  margin-top: 15px;
 }
 
 .popup.open {
